--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -1,17 +1,19 @@
 {
   "$schema": "./node_modules/@angular/service-worker/config/schema.json",
   "index": "/index.html",
+  "appData": {
+    "version": "13:20",
+    "description" : "🚀 swUpdate working 60 s"
+  },
   "assetGroups": [
     {
       "name": "app",
       "installMode": "prefetch",
       "resources": {
         "files": [
-          "/favicon.ico",
           "/index.html",
-          "/manifest.webmanifest",
-          "/*.css",
-          "/*.js"
+          "/manifest.webmanifest"
+
         ]
       }
     },
@@ -21,6 +23,9 @@
       "updateMode": "prefetch",
       "resources": {
         "files": [
+          "/favicon.ico",
+          "/*.css",
+          "/*.js",
           "/assets/**",
           "/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
         ]
